重写CPU指令的实现